2002-02-24  Tor Lillqvist  <tml@iki.fi>

	* gtk/gtkfilesel.c: Move inclusion of <windows.h> before inclusion
	of <winsock.h>, to actually get STRICT prototypes for Win32
	API. Include glib.h early to get G_OS_WIN32 and G_WITH_CYGWIN.
	Don't declare static functions that aren't defined if !HAVE_PWD_H
	or if G_OS_WIN32.
	(win32_gtk_add_drives_to_dir_list): Remove #if 0 code, reindent.
	(gtk_file_selection_get_selections): Don't crash if nothing has
	been selected.

Sat Feb 23 20:33:29 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkplug.[ch] gtk/gtksocket.[ch] gtk/xembed.h: Implement 
	accelerator propagation using a custom XEMBED_GTK_KEY_GRAB
	XEMBED_GTK_KEY_UNGRAB pair of messages.

	* gtk/gtkwindow.[ch]: private export _gtk_window_keys_foreach().

	* gtk/gtkplug.c (gtk_plug_set_is_child): Clear focus and default
	widgets.

2002-02-23  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbuffer.c (save_range): change gravity of start/end
	marks so that text added at either end of the range doesn't end up
	inside the range.
	(gtk_text_buffer_real_insert_range): fix to handle pasting a range
	into itself. #71412
	
Sat Feb 23 19:05:34 2002  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview.c (validate_visible_area): Didn't refind node
	when it was NULL.  Bug found by Tor Lillqvist.

2002-02-24  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (build_keypress_event,
	build_keyrelease_event, gdk_event_translate): Set also group in
	the key press/release events, always to zero for now.

2002-02-24  Anders Carlsson  <andersca@gnu.org>

	* gtk/stock-icons/stock_dialog_error_48.png: 
	* gtk/stock-icons/stock_sort_ascending_16.png:
	* gtk/stock-icons/stock_undelete_24.png: 
	* gtk/stock-icons/stock_sort_descending_16.png: 
	Alpha-pad icons so they get the correct size.
	
Sat Feb 23 16:52:38 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c: Patch from Matthias Clasen to remove some
	excessive ::changed signals for GtkEntry. (#53130)
